--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -38,10 +38,12 @@
 
         <form class="form-signin">
           <h2 class="form-signin-heading">Enter a twitter id</h2>
-          <input type="text" id="twitter-id" name="id" class="input-block-level width6"
+          <input type="text" id="twitter-id" name="id"
+                 class="input-block-level width6"
                  style="width: 180px;" placeholder="id">
           <br>
-          <input type="text" id="black-list" name="black-list" class="input-block-level width6"
+          <input type="text" id="black-list" name="black-list"
+                 class="input-block-level width6"
                  style="width: 180px;" placeholder="black list">
           <br>
           <button id="get_timeline" class="btn btn-large btn-primary"
@@ -55,8 +57,8 @@
         <p class="lead">Go ahead, give it a try.</p>
       </div>
 
-      <div id="tweet">
-        <p id="tweet-body" class="lead"></p>
+      <div id="tweets">
+        <ul id="tweet-list"></ul>
       </div>
 
       <hr>
